[package]
name = "tree-sitter-vhs"
description = "Tree-sitter grammar for the CLI video recorder(.tape files)"
version = "0.1.0"
authors = ["MD. Mouinul Hossain <mdmouinulhossainshawon@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vhs"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/oxy2dev/tree-sitter-vhs.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
