[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-vhs"
description = "Tree-sitter grammer for the CLI video recorder(.tape files)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "vhs"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "MD. Mouinul Hossain", email = "mdmouinulhossainshawon@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/oxy2dev/tree-sitter-vhs.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
